kotlin/kotlin-parser/src/test/semlang/validatorTests/fail/integerLiteral2.sem
function myStuff.myFunction(): Integer {
  Integer."01"
}
